fix(pro:table): column visible change should be trigger onColumnsChange (#1327)

--- a/packages/pro/table/style/index.less
+++ b/packages/pro/table/style/index.less
@@ -2,20 +2,8 @@
   // .reset-component();
 
   &-layout-tool {
-    .@{popover-prefix}-wrapper {
-      padding: @spacing-sm @spacing-xs;
-      min-width: 240px;
-    }
-
-    &-search-wrapper,
-    &-select-wrapper,
-    &-tree-wrapper {
-      padding: 0 @spacing-sm;
-    }
-
     .@{header-prefix} {
-      padding-left: @spacing-sm;
-      padding-right: @spacing-sm;
+      padding-bottom: 0;
 
       &-title {
         color: @text-color;
